--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ services:
   - docker
 
 before_install:
-- make build
+- make build python_bin=python3
 - make run
 
 install: pip install -r requirements.txt
-script: python setup.py test
+script: python3 setup.py test
